--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                         <li>2018</li>
                     </ul>
                 </div><!--col_archives-->
-        
+                <br>
+                <footer>
+                    &copy; 2023. All rights reserved.
+                </footer>
     </body>
 </html>
